--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       FLASK_ENV: development #lazy load u development modu zato je dobar
       DATABASE_URL: postgresql://postgres:postgres@db:5432/postgres  #://user:password@db je ime 16 linija:5432/DB_name
     volumes:
-      - ./backend:/app          #moj kod gdje se nalazi mapiram na workdir 
+      - ./flask:/app          #moj kod gdje se nalazi mapiram na workdir fodler flask
   db:
     image: postgres
     ports: 
