--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,15 +15,15 @@ services:
       - ./backend:/app          #moj kod gdje se nalazi mapiram na workdir fodler flask
     depends_on:
       - db
-  frontend:
-    build: frontend
-    ports:
-      - '4002:3000'
-    volumes:
-      - ./frontend:/usr/src/app
-    depends_on:
-      - db
-      - backend
+  #frontend:
+   # build: frontend
+   # ports:
+   #   - '4002:3000'
+   # volumes:
+  #    - ./frontend:/usr/src/app
+   # depends_on:
+   #   - db
+   #   - backend
   db:
     image: postgres
     ports: 
