--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10
 
-WORKDIR /backend
+WORKDIR /app
 
 COPY requirements.txt .
 
@@ -8,4 +8,4 @@ RUN pip install -r requirements.txt
 
 COPY .  .
 
-CMD [ "python3" , "flask", "run", "--host=0.0.0.0"]
+CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
