--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  backend: 
+  web: 
     build: backend #u koji folder da udje i nadje Dockerfile
     # flask requires SIGINT to stop gracefully
     # (default stop signal from Compose is SIGTERM)
@@ -12,8 +12,9 @@ services:
       FLASK_DEBUG: true
       FLASK_ENV: development #lazy load u development modu zato je dobar
       DATABASE_URL: postgresql://postgres:postgres@db:5432/postgres  #://user:password@db je ime 16 linija:5432/DB_name
+      SECRET_KEY: My_secret_key
     volumes:
-      - ./backend:/backend          #moj kod gdje se nalazi mapiram na workdir fodler flask
+      - ./backend:/app          #moj kod gdje se nalazi mapiram na workdir fodler flask
     depends_on:
       - db
   #frontend:
