Code refactoring, new table
Refactroing code to be initialized from app/app/__init__.py file. Also migrated new Product class to posgres database.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - '5000:5000'
     environment: 
-      FLASK_APP: main
+      FLASK_APP: app
       FLASK_DEBUG: true
       FLASK_ENV: development #lazy load u development modu zato je dobar
       DATABASE_URL: postgresql://postgres:postgres@db:5432/postgres  #://user:password@db je ime 16 linija:5432/DB_name
