--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@syncfusion/ej2-react-dropdowns": "^20.4.38",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-widgets": "^5.8.4",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
