--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "@mui/material": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@syncfusion/ej2-react-dropdowns": "^20.4.38",
     "@testing-library/jest-dom": "^5.16.5",
