--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "react-widgets": "^5.8.4",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
