--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,15 +18,14 @@ services:
       - ./backend:/app          #moj kod gdje se nalazi mapiram na workdir fodler flask
     depends_on:
       - db
-  #frontend:
-   # build: frontend
-   # ports:
-   #   - '4002:3000'
-   # volumes:
-  #    - ./frontend:/usr/src/app
-   # depends_on:
-   #   - db
-   #   - backend
+  react:
+   build: frontend
+   ports:
+     - '3000:3000'
+   volumes:
+     - ./frontend:/app/frontend
+   depends_on:
+     - web
   db:
     image: postgres
     ports: 
